--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -45,7 +45,13 @@ It seems as if Q1 of c52 is larger than Q3 of c39. This leads to a result that s
 
 ### Numerical Descriptive Results
 
+```{r}
+favstats(VitC~Cult,data=veggy)
+```
+
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+Q1 of c39 is at 46 and Q1 of c52 is at 58. Both c39 and c52 have 30 numerical values in them.
 
 ## Inferential Results
 
